devscripts (2.10.17) UNRELEASED; urgency=low

  [ Adam D. Barratt ]
  * checkbashisms:
    + Fix a false positive in the $(( test (Closes: #465364)
    + Add detection for <<<, $(OS|MACH)TYPE, $HOST(TYPE|NAME), $EUID,
      $DIRSTACK, $SECONDS and /dev/(tcp|udp) (Closes: #465386)
    + Enhance heredoc detection to not trigger on <<<
  * Debbugs.pm: Add status(), usertags() versions() and
    versions_with_arch()
  * tagpending:
    + Rewrite in perl using Debbugs.pm
    + Optionally (and by default) include the changelog header line and
      any relevant changelog entries as comments in the generated mail
      (Closes: #439688)
  * debcheckout:
    + Handle spaces between -d and the root for cvs repositories
      (Closes: #465849)
    + Fix a warning about uninitialised values when a module name is not
      supplied for a cvs repository
    + In auth mode, set push_location for bzr branches (Closes: #453447)
  * uscan:
    + Add support for repacking .zip archives, based on a patch
      from Antonio Terceiro (Closes: #456587)
    + Mention an alternative form of sourceforge URL in the manpage that
      allows checking for new versions when the qa.d.o redirector doesn't
      work (Closes: #433408)
    + Fix an escaping error in one of the manpage's examples for twisted
  * Packaging changes:
    + README: Update descriptions of tagpending and debchange
    + debian/control:
      - Add unzip(1) to Suggests for uscan's zip repacking
      - Update descriptions of tagpending and debchange
  * debcommit:
    + Use "git diff" instead of "git-diff" (Closes: #466158)
    + Ignore whitespace changes in diffs
  * dget: Correctly handle the processing of a file that we've already
    retrieved (Closes: #445546)
  * wnpp-alert: Note in the manpage that the results are source package
    based
  * debchange:
    + Modify --closes to use SOAP / Debbugs.pm
    + Add hardy (heron) to the list of supported Ubuntu distributions