@@ -6,8 +6,9 @@ devscripts (2.10.17) UNRELEASED; urgency=low
     + Add detection for <<<, $(OS|MACH)TYPE, $HOST(TYPE|NAME), $EUID,
       $DIRSTACK, $SECONDS and /dev/(tcp|udp) (Closes: #465386)
     + Enhance heredoc detection to not trigger on <<<
-  * Debbugs.pm: Add status(), usertags() versions() and
-    versions_with_arch()
+  * Debbugs.pm: Update to match the current debbugs SOAP interface. Add
+    status(), usertags(), versions() and versions_with_arch(),
+    newest_bugs(), bug_log(), source_to_binary() and binary_to_source()
   * tagpending:
     + Rewrite in perl using Debbugs.pm
     + Optionally (and by default) include the changelog header line and
